[metadata]
name = plotly_helpers
version = 0.0.1
author = Matthias Dold
author_email = matthias.dold@gmx.de
description = General helper functions applied to plotly figures
long_description = file: README.md
long_description_content_type = text/markdown
url = 
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src 

[options.extras_require]
numpy = numpy
pandas = pandas
plotly = plotly
sklearn = scikit-learn
